--- a/bottle_cap_3DTCspace.ipynb
+++ b/bottle_cap_3DTCspace.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,28 +99,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7007\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7008\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
+      "['bottle_cap_cap_to_base_q', 'Schunk_Gripper_base_revolute_joint_q', 'Schunk_Gripper_left_finger_sliding_joint_x']\n",
       "[Variable('s[0]', Continuous) Variable('s[1]', Continuous)\n",
       " Variable('s[2]', Continuous)]\n"
      ]
     }
    ],
    "source": [
-    "# meshcat = StartMeshcat()\n",
     "builder = DiagramBuilder()\n",
     "plant, scene_graph = AddMultibodyPlantSceneGraph(builder, time_step=0.0)\n",
     "parser = Parser(plant, scene_graph)\n",
@@ -158,8 +159,8 @@
     "    body_geometries = inspector.GetGeometries(\n",
     "        plant.GetBodyFrameIdOrThrow(body_index))\n",
     "    gripper_geometries.Add(geometry_ids=body_geometries)\n",
-    "# scene_graph.collision_filter_manager().Apply(\n",
-    "#     CollisionFilterDeclaration().ExcludeWithin(gripper_geometries))\n",
+    "scene_graph.collision_filter_manager().Apply(\n",
+    "    CollisionFilterDeclaration().ExcludeWithin(gripper_geometries))\n",
     "\n",
     "# Gripper and cap collision\n",
     "cap_geometries = GeometrySet()\n",
@@ -183,8 +184,8 @@
     "# visualizer.visualize_collision_constraint(factor = 10, N=50, iso_surface = 0.5, wireframe = True)\n",
     "# # visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))\n",
     "\n",
-    "if plant.num_positions() > 3:\n",
-    "    raise ValueError(\"Can't visualize the TC-Space of plants with more than 3 DOF\")\n",
+    "print(plant.num_positions())\n",
+    "print(plant.GetPositionNames())\n",
     "\n",
     "# start meshcat for task space and delete the default cube\n",
     "meshcat_task_space = StartMeshcat()\n",
@@ -244,7 +245,16 @@
     "query = scene_graph.get_query_output_port().Eval(scene_graph.GetMyContextFromRoot(diagram_context_task_space))\n",
     "\n",
     "\n",
+    "q_star = np.zeros(plant.num_positions()-1)\n",
+    "\n",
     "# Construct the Rational Forward Kinematics\n",
+    "cspace_free_polytope = CspaceFreePolytope(\n",
+    "    plant, \n",
+    "    scene_graph,\n",
+    "    SeparatingPlaneOrder.kAffine,\n",
+    "    q_star\n",
+    ")\n",
+    "\n",
     "rat_forward_kin = RationalForwardKinematics(plant)\n",
     "s_variables = sym.Variables(rat_forward_kin.s())\n",
     "print(rat_forward_kin.s())"
@@ -261,13 +271,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edb1d494ae064e0faf7b8ed8b4bee2e4",
+       "model_id": "ae8d9d4f2bcd4417a20b7da6d79cee59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -281,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ebe149505ef24bb59198128ca0e8dfe1",
+       "model_id": "8640b5e195c44c6b90b71131c72ce3d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "78377d041293434b882e8f7740b02815",
+       "model_id": "15559f5888ab420ea0e2ca6f29ee0154",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,6 +332,7 @@
     "q = np.zeros(plant.num_positions())\n",
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
+    "    print(visualizer.check_collision_q_by_ik(q))\n",
     "    plant.SetPositions(plant_context, q)\n",
     "    diagram_task_space.ForcedPublish(diagram_context_task_space)\n",
     "    \n",
@@ -345,9 +356,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "from pydrake.common.deprecation import DrakeDeprecationWarning\n",
@@ -419,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,9 +466,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'meshcat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_16318/2611357778.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmeshcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmeshcat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSetProperty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/Background\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"visible\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mMeshcatVisualizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAddToBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuilder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscene_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmeshcat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'meshcat' is not defined"
+     ]
+    }
+   ],
    "source": [
     "meshcat.Delete()\n",
     "meshcat.SetProperty(\"/Background\", \"visible\", False)\n",
