--- a/bottle_cap_TCspace.ipynb
+++ b/bottle_cap_TCspace.ipynb
@@ -99,15 +99,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7004\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7005\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
      ]
     }
    ],
@@ -144,24 +151,24 @@
     "# Penetration allowed between gripper and cap\n",
     "\n",
     "# Gripper inner collision\n",
-    "gripper_geometries = GeometrySet()\n",
-    "for i in range(len(plant.GetBodyIndices(gripper))):\n",
-    "    body_index = plant.GetBodyIndices(gripper)[i]\n",
-    "    body_geometries = inspector.GetGeometries(\n",
-    "        plant.GetBodyFrameIdOrThrow(body_index))\n",
-    "    gripper_geometries.Add(geometry_ids=body_geometries)\n",
+    "# gripper_geometries = GeometrySet()\n",
+    "# for i in range(len(plant.GetBodyIndices(gripper))):\n",
+    "#     body_index = plant.GetBodyIndices(gripper)[i]\n",
+    "#     body_geometries = inspector.GetGeometries(\n",
+    "#         plant.GetBodyFrameIdOrThrow(body_index))\n",
+    "#     gripper_geometries.Add(geometry_ids=body_geometries)\n",
     "# scene_graph.collision_filter_manager().Apply(\n",
     "#     CollisionFilterDeclaration().ExcludeWithin(gripper_geometries))\n",
     "\n",
-    "# Gripper and cap collision\n",
-    "cap_geometries = GeometrySet()\n",
-    "for i in range(len(plant.GetBodyIndices(cap))):\n",
-    "    body_index = plant.GetBodyIndices(cap)[i]\n",
-    "    body_geometries = inspector.GetGeometries(\n",
-    "        plant.GetBodyFrameIdOrThrow(body_index))\n",
-    "    cap_geometries.Add(geometry_ids=body_geometries)\n",
-    "scene_graph.collision_filter_manager().Apply(\n",
-    "    CollisionFilterDeclaration().ExcludeWithin(cap_geometries))\n",
+    "# # Gripper and cap collision\n",
+    "# cap_geometries = GeometrySet()\n",
+    "# for i in range(len(plant.GetBodyIndices(cap))):\n",
+    "#     body_index = plant.GetBodyIndices(cap)[i]\n",
+    "#     body_geometries = inspector.GetGeometries(\n",
+    "#         plant.GetBodyFrameIdOrThrow(body_index))\n",
+    "#     cap_geometries.Add(geometry_ids=body_geometries)\n",
+    "# scene_graph.collision_filter_manager().Apply(\n",
+    "#     CollisionFilterDeclaration().ExcludeWithin(cap_geometries))\n",
     "\n",
     "\n",
     "# TODO: This will consider the gripper touching the cap as a collision. \n",
@@ -196,11 +203,14 @@
     "\n",
     "q_star = np.zeros(plant.num_positions())\n",
     "\n",
+    "# Create the TCspaceFreePolytopes\n",
     "cspace_free_polytope = CspaceFreePolytope(\n",
     "    plant, \n",
     "    scene_graph,\n",
     "    SeparatingPlaneOrder.kAffine,\n",
     "    q_star)\n",
+    "\n",
+    "print(plant.num_positions())\n",
     "\n",
     "\n",
     "visualizer = CIrisPlantVisualizer(\n",
@@ -223,75 +233,8 @@
     "# #     plant_context, 0.025\n",
     "# # )\n",
     "\n",
-    "visualizer.visualize_collision_constraint(factor = 10, num_points=100)#N=50, iso_surface = 0.5, wireframe = True)\n",
-    "# # visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if plant.num_positions > 3:\n",
-    "#     raise ValueError(\"Can't visualize the TC-Space of plants with more than 3 DOF\")\n",
-    "\n",
-    "# # start meshcat for task space and delete the default cube\n",
-    "# meshcat_task_space = StartMeshcat()\n",
-    "# meshcat_task_space.Delete()\n",
-    "\n",
-    "# # start meshcat for tangent configuration space\n",
-    "# meshcat_tcspace = StartMeshcat()\n",
-    "# meshcat_tcspace.Delete()\n",
-    "# builder_tcspace = DiagramBuilder()\n",
-    "# plant_tcspace, scene_graph_tcspace = AddMultibodyPlantSceneGraph(\n",
-    "#     builder_tcspace, time_step=0.0)\n",
-    "# plant.tcspace.Finalize()\n",
-    "\n",
-    "\n",
-    "# # start visualizers\n",
-    "# visualizer_task_space = MeshcatVisualizer.AddToBuilder(\n",
-    "#     builder,\n",
-    "#     scene_graph,\n",
-    "#     meshcat_task_space\n",
-    "# )\n",
-    "# viz_role = Role.kIllustration\n",
-    "\n",
-    "# visualizer_tcspace = MeshcatVisualizer.AddToBuilder(\n",
-    "#     builder_tcspace,\n",
-    "#     scene_graph_tcspace,\n",
-    "#     meshcat_tcspace\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# # Build the diagrams\n",
-    "# diagram_task_space = builder.Build()\n",
-    "# diagram_context_task_space = diagram_task_space.CreateDefaultContext()\n",
-    "\n",
-    "# diagram_tcspace = builder_tcspace.Build()\n",
-    "# diagram_context_tcspace = diagram_tcspace.CreateDefaultContext()\n",
-    "\n",
-    "# plant_context = plant.GetMyContextFromRoot(diagram_context_task_space)\n",
-    "\n",
-    "\n",
-    "# # Publish the visualisation in the task space\n",
-    "# diagram_task_space.ForcedPublish(diagram_context_task_space)\n",
-    "\n",
-    "\n",
-    "# # Initialize the simulator\n",
-    "# # The simulator is used to update the visualisation\n",
-    "# simulator = Simulator(\n",
-    "#     diagram_task_space, \n",
-    "#     diagram_context_task_space\n",
-    "# )\n",
-    "# simulator.Initialize()\n",
-    "\n",
-    "\n",
-    "# model_inspector = scene_graph.model_inspector()\n",
-    "# query = scene_graph.get_query_output_port().Eval(scene_graph.GerMy)\n",
-    "\n",
-    "\n",
-    "\n"
+    "visualizer.visualize_collision_constraint(factor = 2, num_points=100)#N=50, iso_surface = 0.5, wireframe = True)\n",
+    "visualizer.meshcat_cspace.Set2dRenderMode(RigidTransform(RotationMatrix.MakeZRotation(np.pi/2), np.array([0,0,1])))"
    ]
   },
   {
@@ -311,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8731108d0fa2442e95a7eae059244f19",
+       "model_id": "09d30b6a7de44847b65b6579fc0ab2b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e994973916e6477a9a428de844e8fc73",
+       "model_id": "c1e7f0ceaa8649cb9ab8403c172a2691",
        "version_major": 2,
        "version_minor": 0
       },
@@ -335,6 +278,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "0.0\n"
+     ]
     }
    ],
    "source": [
@@ -352,6 +310,7 @@
     "q = np.zeros(plant.num_positions())\n",
     "def handle_slider_change(change, idx):\n",
     "    q[idx] = change['new']\n",
+    "    print(visualizer.check_collision_q_by_ik(q))\n",
     "    plant.SetPositions(plant_context, q)\n",
     "    diagram.ForcedPublish(diagram_context)\n",
     "    \n",
