new stuff and qp

--- a/bottle_cap_myViz.ipynb
+++ b/bottle_cap_myViz.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# !pip install mcube\n",
     "from pydrake.common import FindResourceOrThrow\n",
     "from pydrake.geometry import MeshcatVisualizerParams, Role, GeometrySet, CollisionFilterDeclaration\n",
     "from pydrake.geometry.optimization import CspaceFreePolytope, SeparatingPlaneOrder\n",
@@ -16,6 +17,7 @@
     "from pydrake.all import (HPolyhedron, AngleAxis,\n",
     "                         VPolytope, Sphere, Ellipsoid, InverseKinematics,\n",
     "                         Hyperellipsoid, Simulator, Box)\n",
+    "\n",
     "import mcubes\n",
     "\n",
     "import visualization_utils as viz_utils\n",
@@ -47,6 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.widgets import Slider\n",
     "from mpl_toolkits.mplot3d.art3d import Poly3DCollection\n",
@@ -62,23 +65,38 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'plotly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3083/868591961.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# !pip install plotly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_objects\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "\n",
+    "# !pip install plotly\n",
+    "import plotly.graph_objects as go"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7000\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7001\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7004\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7005\n"
      ]
     },
     {
@@ -193,32 +211,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting plotly\n",
-      "  Downloading plotly-6.0.0-py3-none-any.whl (14.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.8/14.8 MB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: packaging in /usr/lib/python3/dist-packages (from plotly) (21.3)\n",
-      "Collecting narwhals>=1.15.1\n",
-      "  Downloading narwhals-1.25.1-py3-none-any.whl (305 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m305.6/305.6 KB\u001b[0m \u001b[31m21.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: narwhals, plotly\n",
-      "Successfully installed narwhals-1.25.1 plotly-6.0.0\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
     "import numpy as np\n",
-    "!pip install plotly\n",
+    "# !pip install plotly\n",
     "# !pip install ipympl\n",
     "import plotly.graph_objects as go\n",
     "\n",
@@ -320,44 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using matplotlib backend: TkAgg\n",
-      "Collecting anywidget\n",
-      "  Downloading anywidget-0.9.13-py3-none-any.whl (213 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m213.7/213.7 KB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hCollecting psygnal>=0.8.1\n",
-      "  Downloading psygnal-0.12.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (774 kB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m774.9/774.9 KB\u001b[0m \u001b[31m12.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hRequirement already satisfied: ipywidgets>=7.6.0 in /usr/local/lib/python3.10/dist-packages (from anywidget) (8.0.4)\n",
-      "Collecting typing-extensions>=4.2.0\n",
-      "  Downloading typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
-      "Requirement already satisfied: ipython>=6.1.0 in /usr/lib/python3/dist-packages (from ipywidgets>=7.6.0->anywidget) (7.31.1)\n",
-      "Requirement already satisfied: ipykernel>=4.5.1 in /usr/lib/python3/dist-packages (from ipywidgets>=7.6.0->anywidget) (6.7.0)\n",
-      "Requirement already satisfied: traitlets>=4.3.1 in /usr/lib/python3/dist-packages (from ipywidgets>=7.6.0->anywidget) (5.1.1)\n",
-      "Requirement already satisfied: jupyterlab-widgets~=3.0 in /usr/local/lib/python3.10/dist-packages (from ipywidgets>=7.6.0->anywidget) (3.0.13)\n",
-      "Requirement already satisfied: widgetsnbextension~=4.0 in /usr/local/lib/python3.10/dist-packages (from ipywidgets>=7.6.0->anywidget) (4.0.5)\n",
-      "Requirement already satisfied: debugpy<2.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from ipykernel>=4.5.1->ipywidgets>=7.6.0->anywidget) (1.8.9)\n",
-      "Installing collected packages: typing-extensions, psygnal, anywidget\n",
-      "Successfully installed anywidget-0.9.13 psygnal-0.12.0 typing-extensions-4.12.2\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "Using matplotlib backend: TkAgg\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "122ca610fe6e472391eda373bfb8e57a",
+       "model_id": "1da13386607241b3adaf9d84045d5db6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(FloatSlider(value=0.0, description='q0', max=3.14, min=-3.14, step=0.06280000000000001), FloatS…"
+       "VBox(children=(FloatSlider(value=0.0, description='q0', max=3.14, min=-3.14, step=0.06280000000000001, style=S…"
       ]
      },
      "metadata": {},
@@ -366,36 +347,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2374074495cd4b09921055578b677754",
+       "model_id": "23a1d64bfad246bab5933ed6ad334403",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FigureWidget({\n",
-       "    'data': [{'colorscale': [[0, 'white'], [1, 'red']],\n",
-       "              'showscale': False,\n",
-       "              'type': 'heatmap',\n",
-       "              'uid': '00129b56-4133-4e39-b287-ce722fe3339c',\n",
-       "              'x': {'bdata': ('vp8aL90kDsBV4vW+94gNwO0k0U4S7Q' ... 'FOEu0MQFbi9b73iA1Avp8aL90kDkA='),\n",
-       "                    'dtype': 'f8'},\n",
-       "              'y': {'bdata': ('TDeJQWDlsL+HXQFyr7mwv8GDeaL+jb' ... 'zDZ9hVvwDj7MNn2EW/AAAAAAAAAAA='),\n",
-       "                    'dtype': 'f8'},\n",
-       "              'z': {'bdata': ('AAAAAAAA8D8AAAAAAADwPwAAAAAAAP' ... 'AAAADwPwAAAAAAAPA/AAAAAAAA8D8='),\n",
-       "                    'dtype': 'f8',\n",
-       "                    'shape': '100, 100'}},\n",
-       "             {'marker': {'color': 'green', 'size': 12},\n",
-       "              'mode': 'markers',\n",
-       "              'name': 'Current Position',\n",
-       "              'type': 'scatter',\n",
-       "              'uid': '6d5fce66-196a-4def-901b-6f53f0898af1',\n",
-       "              'x': [0],\n",
-       "              'y': [0]}],\n",
-       "    'layout': {'autosize': True,\n",
-       "               'template': '...',\n",
-       "               'title': {'text': 'Collision Constraint Visualization'},\n",
-       "               'xaxis': {'title': {'text': 'q0'}},\n",
-       "               'yaxis': {'title': {'text': 'q1'}}}\n",
-       "})"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -403,17 +360,20 @@
     }
    ],
    "source": [
+    "\n",
+    "# %matplotlib \n",
+    "# !pip install anywidget\n",
+    "\n",
+    "import matplotlib\n",
+    "\n",
     "%matplotlib\n",
-    "\n",
-    "import plotly.io as pio\n",
-    "pio.renderers.default = \"notebook\"\n",
-    "\n",
-    "visualise_collision_constraint_plotly()"
+    "visualise_collision_constraint_plotly()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,9 +546,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using matplotlib backend: TkAgg\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71691762bf284645b03c8fcb60e3324b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FloatSlider(value=0.0, description='q0', max=3.14, min=-3.14, step=0.06280000000000001), FloatS…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4ffab7b636845bf8c9d7c3d43b72084",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FigureWidget({\n",
+       "    'data': [{'colorscale': [[0, 'white'], [1, 'red']],\n",
+       "              'showscale…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%matplotlib\n",
     "visualise_collision_constraint_dual_plot()"
