--- a/qp.ipynb
+++ b/qp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,15 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7004\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7005\n"
      ]
     },
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
     "\n",
     "# Define the 8 corner points of the convex hull\n",
     "x_bounds = [-np.pi, np.pi]\n",
-    "y_bounds = [np.pi/2, -np.pi/2]\n",
+    "y_bounds = [-np.pi/2, np.pi/2]\n",
     "z_bounds = [-0.055, -0.025]\n",
     "\n",
     "z_bounds_grasp = [-0.025, -0.024]\n",
@@ -232,26 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "inequality constraints check: True\n",
-      "\n",
-      "equality constraints check: True\n",
-      "\n",
-      "x0: [-3.14   1.57  -0.054]\n",
-      "x1g: [-3.14  -1.57  -0.025]\n",
-      "x2r: [-2.6423308e-13  1.5700000e+00 -2.5000000e-02]\n",
-      "x3g: [-2.65121258e-13 -1.57000000e+00 -2.50000000e-02]\n",
-      "x4r: [ 3.14   1.57  -0.025]\n",
-      "x5: [ 3.14  -1.57  -0.054]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import quadprog\n",
     "\n",
@@ -417,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,27 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3.14   1.57  -0.054] [-3.14  -1.57  -0.025]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-3.14  -1.57  -0.025] [-2.6423308e-13  1.5700000e+00 -2.5000000e-02]\n",
-      "[-2.6423308e-13  1.5700000e+00 -2.5000000e-02] [-2.65121258e-13 -1.57000000e+00 -2.50000000e-02]\n",
-      "[-2.65121258e-13 -1.57000000e+00 -2.50000000e-02] [ 3.14   1.57  -0.025]\n",
-      "[ 3.14   1.57  -0.025] [ 3.14  -1.57  -0.054]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import ceil\n",
     "from time import sleep\n",
