viz working. Next step: integrate with qp

--- a/bottle_cap_myViz.ipynb
+++ b/bottle_cap_myViz.ipynb
@@ -63,40 +63,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'plotly'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3083/868591961.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# !pip install plotly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_objects\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mgo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'plotly'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "\n",
     "# !pip install plotly\n",
-    "import plotly.graph_objects as go"
+    "# import plotly.graph_objects as go"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:drake:Meshcat listening for connections at http://localhost:7004\n",
-      "INFO:drake:Meshcat listening for connections at http://localhost:7005\n"
+      "INFO:drake:Meshcat listening for connections at http://localhost:7002\n",
+      "INFO:drake:Meshcat listening for connections at http://localhost:7003\n"
      ]
     },
     {
@@ -211,15 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: plotly in /usr/local/lib/python3.10/dist-packages (6.0.0)\n",
+      "Requirement already satisfied: packaging in /usr/lib/python3/dist-packages (from plotly) (21.3)\n",
+      "Requirement already satisfied: narwhals>=1.15.1 in /usr/local/lib/python3.10/dist-packages (from plotly) (1.28.0)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "\n",
-    "import numpy as np\n",
-    "# !pip install plotly\n",
-    "# !pip install ipympl\n",
     "import plotly.graph_objects as go\n",
     "\n",
     "from ipywidgets import FloatSlider, VBox, HBox, interact\n",
@@ -320,25 +316,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using matplotlib backend: TkAgg\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1da13386607241b3adaf9d84045d5db6",
+       "model_id": "4aed575f1f0141df9dc74f959abab0aa",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(FloatSlider(value=0.0, description='q0', max=3.14, min=-3.14, step=0.06280000000000001, style=S…"
+       "VBox(children=(FloatSlider(value=0.0, description='q0', max=3.14, min=-3.14, step=0.06280000000000001), FloatS…"
       ]
      },
      "metadata": {},
@@ -347,12 +336,36 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23a1d64bfad246bab5933ed6ad334403",
+       "model_id": "f5a9ad5340d6453b9815ee5f0114550f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output()"
+       "FigureWidget({\n",
+       "    'data': [{'colorscale': [[0, 'white'], [1, 'red']],\n",
+       "              'showscale': False,\n",
+       "              'type': 'heatmap',\n",
+       "              'uid': 'ad68d61b-bbca-4751-b053-ee43ce15d30c',\n",
+       "              'x': {'bdata': ('vp8aL90kDsBV4vW+94gNwO0k0U4S7Q' ... 'FOEu0MQFbi9b73iA1Avp8aL90kDkA='),\n",
+       "                    'dtype': 'f8'},\n",
+       "              'y': {'bdata': ('TDeJQWDlsL+HXQFyr7mwv8GDeaL+jb' ... 'zDZ9hVvwDj7MNn2EW/AAAAAAAAAAA='),\n",
+       "                    'dtype': 'f8'},\n",
+       "              'z': {'bdata': ('AAAAAAAA8D8AAAAAAADwPwAAAAAAAP' ... 'AAAADwPwAAAAAAAPA/AAAAAAAA8D8='),\n",
+       "                    'dtype': 'f8',\n",
+       "                    'shape': '100, 100'}},\n",
+       "             {'marker': {'color': 'green', 'size': 12},\n",
+       "              'mode': 'markers',\n",
+       "              'name': 'Current Position',\n",
+       "              'type': 'scatter',\n",
+       "              'uid': '1de99971-48fd-47c8-94f3-e1b71b454302',\n",
+       "              'x': [0],\n",
+       "              'y': [0]}],\n",
+       "    'layout': {'autosize': True,\n",
+       "               'template': '...',\n",
+       "               'title': {'text': 'Collision Constraint Visualization'},\n",
+       "               'xaxis': {'title': {'text': 'q0'}},\n",
+       "               'yaxis': {'title': {'text': 'q1'}}}\n",
+       "})"
       ]
      },
      "metadata": {},
@@ -364,9 +377,9 @@
     "# %matplotlib \n",
     "# !pip install anywidget\n",
     "\n",
-    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "%matplotlib\n",
+    "%matplotlib inline\n",
     "visualise_collision_constraint_plotly()\n",
     "\n"
    ]
