--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -6,14 +6,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pydrake'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# If the installation works, this should print with no errors.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpydrake\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mall\u001b[39;00m; \u001b[38;5;28mprint\u001b[39m(pydrake\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__file__\u001b[39m)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pydrake'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/drake/lib/python3.10/site-packages/pydrake/__init__.py\n"
      ]
     }
    ],
@@ -26,7 +22,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package: drake, Path: /opt/drake/lib/python3.10/site-packages/pydrake/common/../../../../../share/drake\n",
+      "Package: drake_models, Path: /root/.cache/drake/package_map/49284e3afc7c6ccd80b0c605f070c53ef0bb5d1d96330cf15e87c68d804e78a8-178578bad0b90f28768b2e80f2688fa778c9eaa6a5b44b1043272622f95ec888\n"
+     ]
+    }
+   ],
    "source": [
     "# from pydrake.all import Parser, PackageMap, MultibodyPlant\n",
     "\n",
@@ -46,7 +51,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package is registered!\n",
+      "Path: /root/.cache/drake/package_map/49284e3afc7c6ccd80b0c605f070c53ef0bb5d1d96330cf15e87c68d804e78a8-178578bad0b90f28768b2e80f2688fa778c9eaa6a5b44b1043272622f95ec888\n"
+     ]
+    }
+   ],
    "source": [
     "# from pydrake.all import Parser, PackageMap, MultibodyPlant\n",
     "\n",
@@ -89,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
